Rafael Nadal article webpage with link to Corgi webpage, added link back to Rafa article on Corgi page

--- a/HTML/CorgiWebsite/corgi_text.html
+++ b/HTML/CorgiWebsite/corgi_text.html
@@ -32,5 +32,8 @@ Corgis have lately been the smiling face of Buzzfeed.com, where they're mainly d
 <footer>
 Tags: corgis, Internet trends, memes, going viral, dogs vs. cats, cats vs. dogs, Buzzfeed, the Atlantic, Image
 </footer>
+
+<a href= "../rafa.html">Vamos Rafa!</a>
 </body>
+</doctype html>
 
