Just HTML now with a link to the CSS content

--- a/HTML/Profile/facebook_profile.html
+++ b/HTML/Profile/facebook_profile.html
@@ -1,30 +1,25 @@
 <doctype html>
 <head>
 <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="profile_styles.css">
 </head>
-<style>
-body {
-	background-color: rgb(252, 197, 255);
-}
-</style>
-<body>
 
+<body>
+<section class="text-scheme">
 <h1>Alexis Bird</h1>
 
-<img src= "lolathanksgiving.jpg" alt= "Alexis with Lola, Thanksgiving 2015" height= "400"/ style= "border-style: groove; border-color: magenta; border-width: thick; padding: 50px 50px 50px 50px; margin: 40px 40px 40px 40px;">
+<img src= "lolathanksgiving.jpg" alt= "Alexis with Lola, Thanksgiving 2015" height= "400"/ style= "border-style: groove; border-color: purple; border-width: thick; padding: 50px 50px 50px 50px; margin: 40px 40px 40px 40px;">
 
-<blockquote style= "font-family: 'Raleway', sans-serif;" style="color: rgb(85, 57, 106);">"I wish this was something clever."</blockquote>
+<blockquote>"I wish this was something clever."</blockquote>
 
 <h2 style= "border-style: groove;
-	border-color: magenta;
+	border-color: purple;
 	border-width: thick; padding: 10px 10px 10px 10px;">(Not) Everything you ever needed to know about Alexis</h2>
 
-<p 
+<p>A Portland transplant originally from Southern California (sorry, Portlanders), Alexis Bird recently stumbled upon the world of computer programming and web development. With an innate ability for foreign languages, she decided to focus her attention on an altogether different lingual world and tackle the tech industry. She loves the learning process and challenging her mind with a new way of thinking. Alexis looks forward to becoming a part of the ever-growing tech world.</p>
 
-style= "font-family: 'Raleway', sans-serif;">A Portland transplant originally from Southern California (sorry, Portlanders), Alexis Bird recently stumbled upon the world of computer programming and web development. With an innate ability for foreign languages, she decided to focus her attention on an altogether different lingual world and tackle the tech industry. She loves the learning process and challenging her mind with a new way of thinking. Alexis looks forward to becoming a part of the ever-growing tech world.</p>
-
-<h2 style="color: rgb(85, 57, 106)">A few of my interests...</h2>
-<ul style= "font-family: 'Raleway', sans-serif;">
+<h2>A few of my interests...</h2>
+<ul>
 	<li>Film
 		<ul>
 			<li>Screenwriting</li>
@@ -43,8 +38,9 @@ style= "font-family: 'Raleway', sans-serif;">A Portland transplant originally fr
 	<li>Creative Writing</li>
 	<li>Photography</li>
 	<li>Travel</li>
+	</ul>
 
-
+</section>
 </body>
 
 </doctype>
