modified pricing and javapic

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 	<title>Alexis's Portfolio Pages</title>
-
 </head>
+<body>
+
+<h1>Alexis Bird's Portfolio Site</h1>
+
+<h2>Course Assignments from PDX Code Guild Boot Camp</h2>
+
+</body>
 </html>
