--- a/price_list/pricing/pricing_raw.html
+++ b/price_list/pricing/pricing_raw.html
@@ -30,7 +30,7 @@
                 </tr>
             </tfoot>
         </table>
-
+        <button id ="del-item">Delete Item(s)</button>
         <button id="add-item">Add Item</button>
         <button id="add-stock">Add Stock</button>
         <button id="remove-stock">Remove Stock</button>
